--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,46 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:53</td>   <td>6606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:58</td>   <td>11742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:03</td>   <td>16622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:08</td>   <td>21837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:13</td>   <td>26965</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:19</td>   <td>33196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:24</td>   <td>37472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.statuscode()[pri:7, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">statuscode</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:52</td>   <td>6417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:58</td>   <td>11584</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:03</td>   <td>16495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:08</td>   <td>21671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:13</td>   <td>26768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:19</td>   <td>32917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:28</td>   <td>42380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:07</td>   <td>20784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyContactsLinkclick()[pri:4, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">verifyContactsLinkclick</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:52</td>   <td>6399</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitletest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">verifyHomePageTitletest</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:12</td>   <td>26144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNavLinksSize()[pri:5, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">verifyNavLinksSize</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:17</td>   <td>31278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNavLinksTexts()[pri:6, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">verifyNavLinksTexts</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:42:57</td>   <td>10933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserNameTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">verifyUserNameTest</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>19/05/01 17:43:02</td>   <td>15882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserNameTextTest()[pri:3, instance:com.crm.qa.testcases.HomePageTest@5f2108b5]">verifyUserNameTextTest</td> 
-  <td>main@1815546035</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>19/05/08 11:21:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitleTest()[pri:1, instance:com.crm.qa.testcases.LoginPageTest@5383967b]">loginPageTitleTest</td> 
+  <td>main@36333492</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>19/05/08 11:21:34</td>   <td>4634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:2, instance:com.crm.qa.testcases.LoginPageTest@5383967b]">loginTest</td> 
+  <td>main@36333492</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>19/05/08 11:21:24</td>   <td>-6144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@5383967b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@36333492</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>19/05/08 11:21:30</td>   <td>426</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@5383967b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@36333492</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>19/05/08 11:21:30</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@5383967b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@36333492</td>   <td></td> </tr>
+<tr bgcolor="83b467">  <td>19/05/08 11:21:35</td>   <td>5302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@5383967b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@36333492</td>   <td></td> </tr>
 </table>
